added checked box for matching categories for a single book

--- a/test.html
+++ b/test.html
@@ -14,3 +14,7 @@
             <option value="reclamation"></option>
         </select>
 </form>
+
+<head>
+    <link rel="stylesheet" href="">
+</head>
